# wasvy-experiments

./: .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  justfile  rust-toolchain.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
mods/cubes/: Cargo.toml  build.rs
mods/cubes/src/: lib.rs
mods/cubes/wit/: world.wit
src/: main.rs
