[package]
name = "wasvy-experiments"
version = "0.0.0-alpha"
edition = "2024"

[dependencies]
bevy.workspace = true
wasvy.workspace = true
shared.workspace = true

[workspace]
members = ["crates/*", "mods/*"]
resolver = "2"

[workspace.package]
rust-version = "1.89.0"
version = "0.0.5"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.17.2", features = ["serialize"] }
bevy_ecs = { version = "0.17.2", features = [
    "serialize",
], default-features = false }
bevy_reflect = "0.17.2"
bevy_transform = { version = "0.17.2", features = [
    "serialize",
], default-features = false }
bevy_math = { version = "0.17.2", features = [
    "std",
    "serialize",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shared = { path = "./crates/shared" }
wasvy = "=0.0.5"
wit-bindgen = { version = "0.46.0", features = ["bitflags"] }
